# docs/swagger.json
@@ -491,6 +491,15 @@
                 ],
                 "responses": {}
             }
+        },
+        "/user/": {
+            "get": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "danh sách tài khoản",
+                "responses": {}
+            }
         }
     },
     "definitions": {
